# search-bench

./: .gitignore  CLAUDE.md  README.md  dashboard.py  featurecreep.md  pyproject.toml
blog/: RAGBenchmarkChart.jsx  index.mdx
configs/: claude-mcp.json  codex-config.toml  copilot-settings.json
queries/: queries.json  smoke_queries.json
results/: summary.json
scripts/: index_codebase.py  setup_configs.py  setup_tools.sh
src/analysis/: charts.py  code_quality.py  diff_compare.py  reliability_report.py  report.py  stats.py
src/benchmark/: mcp_config.py  progress.py  retry.py  runner.py  scorer.py
src/mcp_server/: chunker.py  indexer.py  search.py  server.py  store.py
src/wrappers/: base.py  claude.py  codex.py  copilot.py  gemini.py  token_counter.py
tasks/: smoke_tasks.json  tasks.json
